# Tributary

./: .gitignore  README.md  pyproject.toml
config/: tributary.example.toml
config/wireplumber/: 51-tributary-roles.conf
fixtures/: README.md
fixtures/bluez/: NOTES.md  adapter1-introspect-hci0.txt  bluetoothctl-list.txt  bluetoothctl-show.txt  busctl-tree.txt  device1-introspect.txt  getmanagedobjects.txt  hciconfig.txt  media-introspect.txt  rfkill.txt  root-introspect.txt  versions.txt
fixtures/pipewire/: NOTES-a2dp.md  NOTES.md  pw-dump-a2dp-streaming.json  pw-dump-idle.json  pw-dump-playing.json  pw-link-playing.txt  versions.txt  wpctl-status-idle.txt  wpctl-status-playing.txt
fixtures/remote/: NOTES.md  remote-audio-tools.txt  remote-bluetooth.txt  remote-codecs.txt  remote-os.txt  remote-versions.txt
scripts/: setup-host.sh
scripts/testbed/: fake-headphones.sh  fake-phone.sh  inject-tone.py
systemd/: tributary.service
tests/: conftest.py
tests/bt_smoke/: test_smoke.py
tests/integration/: test_mix.py
tests/unit/: test_adapter.py  test_agent.py  test_cli.py  test_config.py  test_daemon.py  test_events.py  test_headphones.py  test_ipc.py  test_mixer.py  test_pipewire.py  test_router.py
tributary/: config.py
tributary/audio/: mixer.py  pipewire.py  router.py
tributary/bluetooth/: adapter.py  agent.py  headphones.py
tributary/control/: cli.py  ipc.py
tributary/core/: daemon.py  events.py
